force-app/main/default/objects/Priority_Keywords__mdt/Priority_Keywords__mdt.object-meta.xml
<CustomObject>
    <description>Place to store the keywords that determine whether a case is defaulted to a high priority case.</description>
    <label>Priority Keyword</label>
    <pluralLabel>Priority Keywords</pluralLabel>
</CustomObject>