force-app/main/default/objects/Priority_Keywords__mdt/fields/Is_Multi_Word__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_Word__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This should be ticked if the word is multi word. For e.g. for record &#39;anti-social&#39; this should be ticked. Also the record should be stored without special characters i.e. hyphens, spaces etc. So words like &#39;anit-social&#39; will be stored as &#39;antisocial&#39;</description>
    <inlineHelpText>This should be ticked if the word is multi word. For e.g. for record &#39;anti-social&#39; this should be ticked. Also the record should be stored without special characters i.e. hyphens, spaces etc.</inlineHelpText>
    <label>Is Multi Word</label>
    <type>Checkbox</type>
</CustomField>