force-app/main/default/objects/Priority_Keywords__mdt/fields/SecurityThreatScore__c.field-meta.xml
<CustomField>
    <fullName>SecurityThreatScore__c</fullName>
    <description>The &quot;security threat score&quot; of this keyword.  Higher score indicates a higher priority.  A value of zero indicates a totally innocent word, while a value of 1000 would signify a word that, alone, would high security threat.  Values of 50,100,150 etc would indicate an important word, but one that, alone, may not pass the score over the threshold.</description>
    <inlineHelpText>Enter a value indicate the security threat level of this keyword.  Zero indicates no security threat; 100 signals important; use 1000 for words such as bomb that, when they appear, should always be treated as high threat.</inlineHelpText>
    <label>Security Threat Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>