force-app/main/default/objects/Priority_Keywords__mdt/validationRules/No_uppercase_in_label.validationRule-meta.xml
<ValidationRule>
    <fullName>No_uppercase_in_label</fullName>
    <active>true</active>
    <description>Words must be entered in lower case only.  So long as the words are entered in lower case, they will match either upper or lower case in the user-entered description.</description>
    <errorConditionFormula>MasterLabel != LOWER(MasterLabel)</errorConditionFormula>
    <errorDisplayField>MasterLabel</errorDisplayField>
    <errorMessage>Priority keywords must be entered in lower case (the comparison is then case insensitive).</errorMessage>
</ValidationRule>