force-app/main/default/objects/Priority_Keywords__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>BusinessPriorityScore__c</columns>
    <columns>SecurityThreatScore__c</columns>
    <columns>Is_Multi_Word__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>